--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,3 +3,25 @@ spring:
     name: mock-banking
   security:
     enabled: false
+  datasource:
+    url: jdbc:h2:file:~/data/mock_banking_db
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+
+  server:
+    port: 8080
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
