--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: mock-banking
+  profiles:
+    include: secret
   security:
     enabled: false
   datasource:
@@ -22,5 +24,3 @@ spring:
     console:
       enabled: true
       path: /h2-console
-jwt:
-  secret: ${JWT_SECRET_KEY}
